--- a/.gitignore
+++ b/.gitignore
@@ -244,4 +244,6 @@ terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/ansible,terraform,linux,python,git
 
-.pem
+*.pem
+
+.terraform.lock.hcl
